Fix MERGE generation to honor selected columns Refactor MERGE generator classes